--- a/writerIntro.html
+++ b/writerIntro.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="liferary">
     <title>작가 소개 페이지</title>
     <link rel="stylesheet" href="css/master.css">
 </head>
