--- a/bbs.html
+++ b/bbs.html
@@ -52,7 +52,16 @@
           <p>L'Arbre des Possibles(가능성의 나무)</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <h3>"상상의 나뭇가지들은 우주를 만든다."</h3>
+          <p>이 책에 나오는 것들은 대게 망상적이거나 상상의 이야기들이다.</p>
+          <p>하지만 혹시 아는가 실제로 이런 일이 있을수도 있다는 것을.</p>
+          <p>더불어 그는 언제나 세상을 하나의 평면된 공간으로 보지 않는다.</p>
+          <p>개미의 세상 위엔 인간의 세상이 있고 그 위에는 신들의 세상이 있고 또 그 위에는 지구를 다루는 외계인들이 세상이 있다.</p>
+          <p>(냄새, 그들을 사랑하는 법을 배우자, 취급 주의, 어린 신들의 학교)</p>
+          <p>그에게 본질적으로 하나로 정의되는 것들은 없다.</p>
+          <p>인간이라고 생각한 인간은 사실 인공 심장을 가진 채 인간인 척 하는 것처럼 말이다.(내겐 너무 좋은 세상, 완전한 은둔자, 그 주인에 그 사자)</p>
+          <p>'인간'을 '인간'으로 보지 않고, '세상'을 '세상'으로 보지 않고 의심을 하고 재미를 넣어주는 것.</p>
+          <p>그야말로 그는 타고난 이야기꾼이다.</p>
         </div>
       </section>
       <section class="review">
@@ -65,7 +74,11 @@
           <p>개미들을 마치 인간처럼 표현한 소설</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <h3>작가의 섬세함이 부른 역작, 세상에 태어난 개미, 인간 이상의 감동</h3>
+          <p>베르나르 베르베르의 '개미'는 매우 독특하고 흥미로운 작품이라고 느낄 수 있습니다. 개미의 사회와 인간 세계를 연결하는 이야기를 통해 작품은 인간과 개미 간의 공존과 대립에 대한 심도 있는 토론을 제공합니다. 이를 통해 독자들은 생물 간의 상호 이해와 지구상의 모든 생명체가 공존하는 중요성을 깨닫게 됩니다.</p>
+          <p>또한, 작품은 과학과 인문학이 조화롭게 접목된 서사를 통해 독자들에게 새로운 정보와 인간 세계에 대한 지식을 제공합니다. 이런 면에서 독자들은 작품을 읽으며 동시에 여러 분야의 이해를 높일 수 있습니다.</p>
+          <p>작품에서 인간 캐릭터와 개미 캐릭터의 관점이 교차되는 방식은 독자들에게 서로 다른 시선을 제공하며, 이를 통해 다양한 각도에서 사물을 바라볼 수 있는 귀중한 경험을 선사합니다.</p>
+          <p>결국, '개미'는 독특한 설정과 깊이 있는 메시지를 가진 작품으로서 독자들에게 사색할 거리와 감동을 선사하며, 사람들 사이에서 폭넓게 추천되는 작품이 될 것 같습니다.</p>
         </div>
       </section>
       <section class="review">
@@ -78,7 +91,8 @@
           <p>'전설의 달빛 조각사'가 되어 떼돈을 벌기 위한 위드의 대장정이 시작된다!</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <h3>역시 믿고보는 달빛조각사</h3>
+          <p>워낙에 유명한 작품이라 소설을 좋아하는 사람이라면 조금이라도 안 본 사람이 드문 작품이다. 초반에 읽을 때는 너무 신선하고 재밌었어 밤을 새며 읽기도 했었다. 주인공이 홀로 무적이지는 않아서 사건사고를 해결해 나가는 과정이 유쾌하고 흥미로웠다. 개인적인 생각으로는 중반 정도쯤에서 마무리를 지었어도 좋았을 것 같다. 작품이 길어지다 보니 문제도 많이 생긴 것 같다. 게임 장르의 소설을 좋아하는 사람이라면 반드시 읽어 볼 만한 소설이다.</p>
         </div>
       </section>
       <section class="review">
@@ -91,7 +105,8 @@
           <p>로빈슨 크루소의 무인도 생존기</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <h3>탁월한 구성과 독특한 내레이션, 독자를 매혹시키는 짜릿한 사건</h3>
+          <p>로빈슨 크루소는 마냥 아이들 책이 아니라는 것을 알게된 책이고 원작은 훨씬 더 깊은 묘사와 감정선이 들어가있으며 훨씬 더 잔인하기도 하고 우울하기도 하다. 그저 로빈슨 크루소는 무인도에서 행복하게 살고 이런 이야기가 아닌 것이다.</p>
         </div>
       </section>
       <section class="review">
@@ -104,7 +119,7 @@
           <p>무려 3149편에 달하는 장편 판타지 소설이 현실이 되어버렸다. 그리고 그 작품을 완독한 이는 단 한 명뿐이었다.</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <p>그 이야기는, 지하철에서 시작되었다. 그곳에, 정의롭고 싶었던 군인이 있었다. 세상에서 가장 강하고 고독한 사내가 있었고, 타인을 위해 자신을 숨겨왔던 여인도, 그곳에 있었다. 인연을 잃고 상처 받은 검귀를 만났고 과거와 미래의 틈새에서 태어난 아이가 울었다. 세상에서 가장 강한 소인을 스승으로 두었고 세상에서 가장 강한 거인의 세계를 구했다. 그리고, 이 모든 세계의 결말을 아는 한 사내가 있었다.</p>
         </div>
       </section>
       <section class="review">
@@ -117,7 +132,10 @@
           <p>해리 포터 시리즈의 일곱 번째 이야기이자 마지막 이야기로 시리즈의 대단원의 막을 내리는 최종장.</p>
         </div>
         <div class="reviewBody">
-          <p>내용</p>
+          <h3>해리포터 시리즈의 최종장</h3>
+          <p>문득 해리포터 시리즈를 원문으로 읽어 보면 어떨까 싶어서 구매했다.</p>
+          <p>복잡한 어휘는 적었지만, 문화적인 차이 부분에서 막혔던 부분이 많았다.</p>
+          <p>그래도 번역본으로 읽었을 때보다 원문 특유의 전달력이 더 좋았다.</p>
         </div>
       </section>
       <p class="pageN">
