--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="liferary">
     <title>mainPage</title>
+    <!-- <link rel="stylesheet" type="text/css" href="css/old_master.css"> -->
     <link rel="stylesheet" type="text/css" href="css/master.css">
 </head>
 <body id="index">
@@ -12,110 +14,117 @@
     </header>
     <article id="content">
         <section id="eventPhoto">
-            <div class="eventPhoto">
-                <img src="images/eventPhoto1.png" alt="이벤트 이미지">
-                <img src="images/eventPhoto2.png" alt="이벤트 이미지">
-                <img src="images/eventPhoto3.png" alt="이벤트 이미지">
-                <img src="images/eventPhoto4.png" alt="이벤트 이미지">
-                <img src="images/eventPhoto5.png" alt="이벤트 이미지">
-            </div>
+            <img src="images/eventPhoto1.png" alt="이벤트 이미지">
+            <img src="images/eventPhoto2.png" alt="이벤트 이미지">
+            <img src="images/eventPhoto3.png" alt="이벤트 이미지">
+            <img src="images/eventPhoto4.png" alt="이벤트 이미지">
+            <img src="images/eventPhoto5.png" alt="이벤트 이미지">
         </section>
         <section id="writerContent">
-            <div class="writerIntro">
-                <div class="circle">
-                    <a href="writerIntro.html"><img src="images/hangang1.jpg" alt="한강작가">
-                        <p class="circleBack">한강 작가</p>
-                    </a>
+            <h2>이달의 작가</h2>
+            <div class="writerContent">
+                <div class="writerIntro">
+                    <div class="circle">
+                        <a href="writerIntro.html"><img src="images/hangang1.jpg" alt="한강작가">
+                            <p class="circleBack">한강 작가</p>
+                        </a>
+                    </div>
+                    <span>소설가 한강</span>
                 </div>
-                <span>소설가 한강</span>
+                <div class="writerIntro">
+                    <div class="circle">
+                        <a href="#"><img src="images/gilyeong1.jpg" alt="송길영작가">
+                            <p class="circleBack">송길영 작가</p>
+                        </a>
+                    </div>
+                    <span>빅데이터 전문가 송길영</span>
+                </div>
+                <div class="writerIntro">
+                    <div class="circle">
+                        <a href="#"><img src="images/jiae1.jpg" alt="지애작가">
+                            <p class="circleBack">문지애 작가</p>
+                        </a>
+                    </div>
+                    <span>아나운서 문지애</span>
+                </div>
+                <div class="writerIntro">
+                    <div class="circle">
+                        <a href="#">
+                            <img src="images/harim1.jpg" alt="하림작가">
+                            <p class="circleBack">오하림 작가</p>
+                        </a>
+                    </div>
+                    <span>카피라이터 오하림</span>
+                </div>
+                <div class="writerIntro">
+                    <div class="circle">
+                        <a href="#"><img src="images/yeonman1.jpg" alt="연만작가">
+                            <p class="circleBack">나연만 작가</p>
+                        </a>
+                    </div>
+                    <span>소설가 나연만</span>
+                </div>
             </div>
-            <div class="writerIntro">
-            <div class="circle">
-                <a href="#"><img src="images/gilyeong1.jpg" alt="송길영작가">
-                    <p class="circleBack">송길영 작가</p>
-                </a>
-            </div>
-            <span>빅데이터 전문가 송길영</span>
-        </div>
-            <div class="writerIntro">
-            <div class="circle">
-                <a href="#"><img src="images/jiae1.jpg" alt="지애작가">
-                    <p class="circleBack">문지애 작가</p>
-                </a>
-            </div>
-            <span>아나운서 문지애</span>
-        </div>
-            <div class="writerIntro">
-            <div class="circle">
-                <a href="#">
-                    <img src="images/harim1.jpg" alt="하림작가">
-                    <p class="circleBack">오하림 작가</p>
-                </a>
-            </div>
-            <span>카피라이터 오하림</span>
-        </div>
-            <div class="writerIntro">
-            <div class="circle">
-                <a href="#"><img src="images/yeonman1.jpg" alt="연만작가">
-                    <p class="circleBack">나연만 작가</p>
-                </a>
-            </div>
-            <span>소설가 나연만</span>
-        </div>
         </section>
+        <!-- section#wirterContent end -->
         <section id="recommend">
             <h2>추천도서</h2>
             <span class="more"><a href="recommend.html">더보기</a></span>
-            <div class="book">
-                <a href="bookInfo.html"><img src="images/boy.jpg" alt="소년이 온다"></a>
-                <h3><a href="bookInfo.html">소년이 온다</a></h3>
-                <p>소설</p>
-                <p>한강</p>
-            </div>
-            <div class="book">
-                <a href="#"><img src="images/trend.jpg" alt="트렌드 코리아2025"></a>
-                <h3><a href="#">트렌드 코리아 2025</a></h3>
-                <p>자기계발서</p>
-                <p>김난도 외 9명</p>
-            </div>
-            <div class="book">
-                <a href="#"><img src="images/happy.jpg" alt="어른의 행복은 조용하다"></a>
-                <h3><a href="#">어른의 행복은 조용하다</a></h3>
-                <p>자기계발서</p>
-                <p>태수</p>
-            </div>
-        </section>
-        <section id="best">
-            <div class="bestBook">
-                <h2>베스트셀러</h2>
-                <span class="more"><a href="#">더보기</a></span>
+            <div class="books book3">
                 <div class="book">
-                    <a href="#"><img src="images/nexus.jpg" alt="넥서스"></a>
-                    <h3><a href="#">넥서스</a></h3>
-                    <p>인문</p>
-                    <p>유발 하라리</p>
-                </div>
-                <div class="book">
-                    <a href="#"><img src="images/poor.jpg" alt="가난한 찰리의 연감"></a>
-                    <h3><a href="#">가난한 찰리의 연감</a></h3>
-                    <p>경제 경영</p>
-                    <p>찰리 멍거</p>
-                </div>
-                <div class="book">
-                    <a href="#"><img src="images/time.jpg" alt="회랍어 시간"></a>
-                    <h3><a href="#">회랍어 시간</a></h3>
+                    <a href="bookInfo.html"><img src="images/boy.jpg" alt="소년이 온다"></a>
+                    <h3><a href="bookInfo.html">소년이 온다</a></h3>
                     <p>소설</p>
                     <p>한강</p>
                 </div>
                 <div class="book">
-                    <a href="#"><img src="images/trump.jpg" alt="트럼프 2.0 시대"></a>
-                    <h3><a href="#">트럼프 2.0시대</a></h3>
-                    <p>경제 경영</p>
-                    <p>박종훈</p>
-                </div> 
+                    <a href="#"><img src="images/trend.jpg" alt="트렌드 코리아2025"></a>
+                    <h3><a href="#">트렌드 코리아 2025</a></h3>
+                    <p>자기계발서</p>
+                    <p>김난도 외 9명</p>
+                </div>
+                <div class="book">
+                    <a href="#"><img src="images/happy.jpg" alt="어른의 행복은 조용하다"></a>
+                    <h3><a href="#">어른의 행복은 조용하다</a></h3>
+                    <p>자기계발서</p>
+                    <p>태수</p>
+                </div>
             </div>
-            
         </section>
+        <!-- section#recommend end -->
+        <section id="best">
+            <div class="bestBook">
+                <h2>베스트셀러</h2>
+                <span class="more"><a href="#">더보기</a></span>
+                <div class="books book4">
+                    <div class="book">
+                        <a href="#"><img src="images/nexus.jpg" alt="넥서스"></a>
+                        <h3><a href="#">넥서스</a></h3>
+                        <p>인문</p>
+                        <p>유발 하라리</p>
+                    </div>
+                    <div class="book">
+                        <a href="#"><img src="images/poor.jpg" alt="가난한 찰리의 연감"></a>
+                        <h3><a href="#">가난한 찰리의 연감</a></h3>
+                        <p>경제 경영</p>
+                        <p>찰리 멍거</p>
+                    </div>
+                    <div class="book">
+                        <a href="#"><img src="images/time.jpg" alt="회랍어 시간"></a>
+                        <h3><a href="#">회랍어 시간</a></h3>
+                        <p>소설</p>
+                        <p>한강</p>
+                    </div>
+                    <div class="book">
+                        <a href="#"><img src="images/trump.jpg" alt="트럼프 2.0 시대"></a>
+                        <h3><a href="#">트럼프 2.0시대</a></h3>
+                        <p>경제 경영</p>
+                        <p>박종훈</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- section#best end -->
         <section id="new">
             <div>
                 <h2>신간 도서</h2>
@@ -136,37 +145,44 @@
                 </div>
             </div>
         </section>
+        <!-- section#new end -->
         <section id="foreign">
             <h2>미리보는 해외서적</h2>
-            <div class="foreignCover">
-                <img src="images/hallows.jpg" alt="해리포터와 죽음의 성물(영문)">
-            </div>
-            <div class="foreign">
-                <h3>원문내용</h3>
-                <p>The two men appeared out of nowhere, a few yards apart in the narrow, moonlit lane. For a second they stood quite still, wands directed at each other's chests; then, recognizing each other, they stowed their wands beneath their cloaks and started walking briskly in the same direction.</p>
-                <p>“News?” asked the taller of the two.</p>
-                <p>“The best,” replied Severus Snape.</p>
-                <p>The lane was bordered on the left by wild, low-growing brambles, on the right by a high, nearty manicured hedge. The men's long cloaks flapped around their ankles as they marched.</p>
-                <p>“Thought I might be late.” said Yaxley.</p>
-            </div>
-            <div class="foreign">
-                <h3>번역본</h3>
-                <p>"새로운 소식 있나?" 둘 중 키 큰 사람이 물었다.</p>
-                <p>"최고의 소식이 있지." 세베루스 스네이프가 대답했다.</p>
-                <p>좁은 길에서 왼쪽에는 나지막한 야생 찔레꽃 덤불이 줄지어 있고, 오른쪽에는 깔끔하게 손질된 산울타리가 높이 솟아 있었다. 성큼성큼 걷는 남자들의 발목 근처에서 긴 망토자락이 펄럭였다.</p>
-                <p>"늦었을 수도 있다고 생각했는데." 약슬리가 말했다.</p>
-                <p class="viewer">더보기</p>
+            <div class="bookPreview">
+                <div class="foreignCover">
+                    <img src="images/hallows.jpg" alt="해리포터와 죽음의 성물(영문)">
+                </div>
+                <div class="foreign">
+                    <h3>원문내용</h3>
+                    <p>The two men appeared out of nowhere, a few yards apart in the narrow, moonlit lane. For a second they stood quite still, wands directed at each other's chests; then, recognizing each other, they stowed their wands beneath their cloaks and started walking briskly in the same direction.</p>
+                    <p>“News?” asked the taller of the two.</p>
+                    <p>“The best,” replied Severus Snape.</p>
+                    <p>The lane was bordered on the left by wild, low-growing brambles, on the right by a high, nearty manicured hedge. The men's long cloaks flapped around their ankles as they marched.</p>
+                    <p>“Thought I might be late.” said Yaxley.</p>
+                </div>
+                <div class="foreign">
+                    <h3>번역본</h3>
+                    <p>"새로운 소식 있나?" 둘 중 키 큰 사람이 물었다.</p>
+                    <p>"최고의 소식이 있지." 세베루스 스네이프가 대답했다.</p>
+                    <p>좁은 길에서 왼쪽에는 나지막한 야생 찔레꽃 덤불이 줄지어 있고, 오른쪽에는 깔끔하게 손질된 산울타리가 높이 솟아 있었다. 성큼성큼 걷는 남자들의 발목 근처에서 긴 망토자락이 펄럭였다.</p>
+                    <p>"늦었을 수도 있다고 생각했는데." 약슬리가 말했다.</p>
+                    <p class="viewer"><a href="foreign.html">더보기</a></p>
+                </div>
             </div>
         </section>
+        <!-- section#foreign end -->
         <section id="hotReview">
             <h2>커뮤니티 화제의 글</h2>
-            <a href="bbs.html"><img src="images/harrypoter_all.jpg" alt="해리포터 시리즈"></a>
-            <div class="bookInfo">
-                <h3><a href="bbs.html">제목 : 해리포터 시리즈</a></h3>
-                <p class="underLine">작가 : J. K. 롤링</p>
-                <p>마법사 해리포터의 모험 이야기</p>
+            <div class="bbsPreview">
+                <a href="bbs.html"><img src="images/harrypoter_all.jpg" alt="해리포터 시리즈"></a>
+                <div class="bookInfo">
+                    <h3><a href="bbs.html">제목 : 해리포터 시리즈</a></h3>
+                    <p class="underLine">작가 : J. K. 롤링</p>
+                    <p>마법사 해리포터의 모험 이야기</p>
+                </div>
             </div>
         </section>
+        <!-- section#hotReview end -->
     </article>
     <footer id="footer">
     </footer>
