--- a/writerIntro.html
+++ b/writerIntro.html
@@ -16,7 +16,7 @@
             </div>
         </section>
         <section id="writerIntro">
-            <img src="images/hankangNobel.webp" alt="한강 작가 그림" height="330">
+            <img src="images/hankangNobel.webp" alt="한강 작가 그림">
             <h2>Han Kang</h2>
             <p>1970년 겨울 광주에서 태어났다. 1993년 『문학과사회』 겨울호에 시 「서울의 겨울」 외 네 편을 발표하고 이듬해 『서울신문』 신춘문예에 단편소설 「붉은 닻」이 당선되어 작품 활동을 시작했다. 소설집 『여수의 사랑』 『내 여자의 열매』 『노랑무늬영원』, 장편소설 『검은 사슴』 『그대의 차가운 손』 『채식주의자』 『바람이 분다, 가라』 『희랍어 시간』 『소년이 온다』 『흰』 『작별하지 않는다』, 시집 『서랍에 저녁을 넣어 두었다』 등을 출간했다. 오늘의 젊은 예술가상, 이상문학상, 동리문학상, 만해문학상, 황순원문학상, 김유정문학상, 김만중문학상, 대산문학상, 인터내셔널 부커상, 말라파르테 문학상, 산클레멘테 문학상, 메디치 외국문학상, 에밀 기메 아시아문학상 등을 수상했으며, 노르웨이 ‘미래 도서관’ 프로젝트 참여 작가로 선정되었다. 2024년 한국 최초 노벨문학상을 수상했다.</p>
         </section>
@@ -39,38 +39,40 @@
         </section>
         <section id="bookList">
             <h2>주요 작품들</h2>
-            <div class="book">
-                <a href="#"><img src="images/essential.jpg" alt="한강 모음집"></a>
-            </div>
-            <div class="book">
-                <a href="#"><img src="images/goodbye.jpg" alt="이별하지 않는다"></a>
-            </div>
-            <div class="book">
-                <a href="#"><img src="images/vegetarian.jpg" alt="채식주의자"></a>
-            </div>
-            <div class="book">
-                <a href="#"><img src="images/white.jpg" alt="흰"></a>
+            <div class="books book4">
+                <div class="book">
+                    <a href="#"><img src="images/essential.jpg" alt="한강 모음집"></a>
+                </div>
+                <div class="book">
+                    <a href="#"><img src="images/goodbye.jpg" alt="이별하지 않는다"></a>
+                </div>
+                <div class="book">
+                    <a href="#"><img src="images/vegetarian.jpg" alt="채식주의자"></a>
+                </div>
+                <div class="book">
+                    <a href="#"><img src="images/white.jpg" alt="흰"></a>
+                </div>
             </div>
         </section>
         <section id="interview">
             <h2>관련 인터뷰</h2>
             <img src="images/hangangInterview.jpg" alt="한강작가 인터뷰 사진">
-            <h3 class="title">
-                [한강 단독 인터뷰] 창밖은 고요합니다.<br>
-                …고단한 날에도 한 문단이라도 읽고<br>
-                 잠들어야 마음이 편안해집니다
-            </h3>
-            <div class="section">
-            <p>한강 작가의 노벨문학상 수상 소식을 예상한 사람은 많지 않았기에, 그리고 평소 대외활동이 많지 않던 한강 작가이기에 공식적인 인터뷰 기사를 만나는 것은 아마도 한참 후가 될 거라고 생각했다. 하지만 놀랍게도 노벨문학상 수상 다음날 한강 작가의 단독 인터뷰가 나왔다.</p>
-            <p>매일경제신문 김유태 기자의 허락을 얻어 한강 작가 단독 인터뷰를 게재한다. 김유태 기자는 개인 페이스북에 올린 한강 작가 인터뷰에 대한 후기를 통해 대학생때부터 앓던 한강 소설에 대한 열병과 이후 문학기자로서 가졌던 간절한 마음을 보여주기도 했는데, 오랜 시간 동안 한강 작가의 작품을 읽고, 연구하고, 좋은 질문을 던지기 위해 고민하고, 꾸준히 인터뷰를 요청해왔던 노력들이 한데 모여 만들어낸 소중한 인터뷰를 교보문고 독자들과 나누어 주었다.</p>
+            <div class="article">
+                <h3 class="title">
+                    [한강 단독 인터뷰] 창밖은 고요합니다.<br>
+                    …고단한 날에도 한 문단이라도 읽고
+                     잠들어야 마음이 편안해집니다
+                </h3>
+                <p>한강 작가의 노벨문학상 수상 소식을 예상한 사람은 많지 않았기에, 그리고 평소 대외활동이 많지 않던 한강 작가이기에 공식적인 인터뷰 기사를 만나는 것은 아마도 한참 후가 될 거라고 생각했다. 하지만 놀랍게도 노벨문학상 수상 다음날 한강 작가의 단독 인터뷰가 나왔다.</p>
+                <p>매일경제신문 김유태 기자의 허락을 얻어 한강 작가 단독 인터뷰를 게재한다. 김유태 기자는 개인 페이스북에 올린 한강 작가 인터뷰에 대한 후기를 통해 대학생때부터 앓던 한강 소설에 대한 열병과 이후 문학기자로서 가졌던 간절한 마음을 보여주기도 했는데, 오랜 시간 동안 한강 작가의 작품을 읽고, 연구하고, 좋은 질문을 던지기 위해 고민하고, 꾸준히 인터뷰를 요청해왔던 노력들이 한데 모여 만들어낸 소중한 인터뷰를 교보문고 독자들과 나누어 주었다.</p>
             </div>
-            <div class="section">
-            <h3>◆ 2024 노벨상 ◆</h3>
-            <p>노벨문학상을 수상한 한강 작가와의 인터뷰 질의서는 9월 29일 발송됐으며, 첫 번째 답변은 일주일 뒤인 6일 이메일로 도착했다. 추가 질의서를 보내고 10일 오전 두 번째 이메일이 도착했다. 메일을 열어 본 뒤 약 10시간이 지나 한강의 이름은 노벨문학상을 주관하는 스웨덴 한림원에서 호명됐다. 한강이 보내온 인터뷰 답변을 한강 작가의 목소리 그대로 전한다.</p>
-            <p>-지금 선생님이 위치하신 장소의 풍경이 궁금합니다. 창문 바깥의 풍경엔 어떤 사람들이 지나가고 탁자엔 어떤 사물이 있는지, 또 어떤 책이 펼쳐져 있는지.</p>
-            <p>▷지금은 일요일 새벽(6일)이라 창밖에 아무도 지나가지 않고 고요합니다. 최근까지 조해진 작가의 《빛과 멜로디》, 김애란 작가의 《이중 하나는 거짓말》을 읽었고 지금은 유디트 샬란스키의 《잃어버린 것들의 목록》과 장 자크 루소의 《루소의 식물학 강의》를 번갈아 읽고 있습니다. 사이사이 문예지들도 손 가는 대로 읽고요. 저는 쓰는 사람이기 전에 읽는 사람이라고 느낍니다. 고단한 날에도 한 문단이라도 읽고 잠들어야 마음이 편안해집니다.</p>
+            <div class="article">
+                <h3>◆ 2024 노벨상 ◆</h3>
+                <p>노벨문학상을 수상한 한강 작가와의 인터뷰 질의서는 9월 29일 발송됐으며, 첫 번째 답변은 일주일 뒤인 6일 이메일로 도착했다. 추가 질의서를 보내고 10일 오전 두 번째 이메일이 도착했다. 메일을 열어 본 뒤 약 10시간이 지나 한강의 이름은 노벨문학상을 주관하는 스웨덴 한림원에서 호명됐다. 한강이 보내온 인터뷰 답변을 한강 작가의 목소리 그대로 전한다.</p>
+                <p>-지금 선생님이 위치하신 장소의 풍경이 궁금합니다. 창문 바깥의 풍경엔 어떤 사람들이 지나가고 탁자엔 어떤 사물이 있는지, 또 어떤 책이 펼쳐져 있는지.</p>
+                <p>▷지금은 일요일 새벽(6일)이라 창밖에 아무도 지나가지 않고 고요합니다. 최근까지 조해진 작가의 《빛과 멜로디》, 김애란 작가의 《이중 하나는 거짓말》을 읽었고 지금은 유디트 샬란스키의 《잃어버린 것들의 목록》과 장 자크 루소의 《루소의 식물학 강의》를 번갈아 읽고 있습니다. 사이사이 문예지들도 손 가는 대로 읽고요. 저는 쓰는 사람이기 전에 읽는 사람이라고 느낍니다. 고단한 날에도 한 문단이라도 읽고 잠들어야 마음이 편안해집니다.</p>
             </div>
-            <div class="interview section">
+            <div class="interview article">
                 <h3>포니정 혁신상 이어 노벨상… 수상은 부담스러운 일이지만 소설 쓰다 보면 느낄 틈 사라져</h3>
                 <div class="more">더보기</div>
                 <div class="interviewBody">
@@ -80,7 +82,7 @@
                     <p>▷대학을 졸업하고 ‘샘터’에 입사해 일하던 때 영종도로 직원 수련회를 갔는데, 해 질 무렵 썰물이 빠져나간 모래펄에 녹슨 닻들이 박혀 있는 것을 보고 그 풍경 앞에 서 있는 두 사람의 이야기를 소설로 쓰고 싶다고 생각했습니다. 첫 단편집 《여수의 사랑》에 묶인 소설들을 쓰던 시기에는 고단함에 관심이 있었습니다. 인간이 어떻게 삶을 버티고, 떠나기를 몰래 꿈꾸고, 저마다 홀로 피로와 시련을 감당해내는가 하는 것이 관심사였습니다.</p>
                 </div>
             </div>
-            <div class="interview section">
+            <div class="interview article">
                 <h3>나를 흔드는 의문들, 감정들 … 그것들을 문학이 다룬다면 읽는 사람들은 자신을 재발견</h3>
                 <div class="more">더보기</div>
                 <div class="interviewBody">
@@ -92,7 +94,7 @@
                     <p>▷도시 바르샤바에서 살았던 경험은 《흰》을 쓰는 데에 직접적인 영향을 주었습니다. 낯선 곳에서 가을과 겨울을 보내며 밤마다 《흰》을 조금씩 써간 시간이 참 좋았습니다. 한편 《소년이 온다》와 《작별하지 않는다》는 서로 연결되어 있는 짝과 같은 소설입니다. 실제로 《소년이 온다》의 에필로그와 《작별하지 않는다》의 프롤로그 격인 1부 1장은 연결되어 있고, 비슷한 기능을(현재와 과거, 소설과 현실을 잇는 다리 같은 것으로서) 하기를 바라며 썼습니다. 《작별하지 않는다》는 《소년이 온다》를 출간한 지 얼마 되지 않았을 때 꾼 꿈에서 시작된 소설입니다. 우듬지가 잘린 검은 통나무들이 수천, 수만 그루 들판에 심겨 있고, 그 나무들 뒤편마다 무덤이 있고, 멀리서부터 밀려온 바다가 무덤들을 쓸어 가는 꿈이었습니다. 어떤 꿈은 현실에서 경험한 것보다 강한 영향력을 가지기도 합니다. 이 두 소설을 모두 쓰는 데 약 9년이 걸렸는데, 중간에 꾼 그 꿈이 결국 이 두 편의 소설을 모두 끌어안고 있다는 생각이 들기도 합니다.</p>
                 </div>
             </div>
-            <div class="interview section">
+            <div class="interview article">
                 <h3>요즘 생명에 대한 생각 자주해 … 겨울 오기 전 새 작품 끝낼 계획</h3>
                 <div class="more">더보기</div>
                 <div class="interviewBody">
@@ -102,7 +104,7 @@
                     <p>▷생각하고 서성이고 고민하고 질문하고 길을 잃고 우회하고 되돌아오고…. 그런 일이 소설을 쓰는 일이라고 지금도 느낍니다. 그렇게 질문들을 다루는 방식으로 글을 쓰는 것이라고요.</p>
                 </div>
             </div>
-            <div class="interview section">
+            <div class="interview article">
                 <h3>어디든 읽는 이들 존재한다면 한국작품 만나는 일 자연스러워</h3>
                 <div class="more">더보기</div>
                 <div class="interviewBody">
@@ -114,7 +116,7 @@
                     <p>▷저에게 영향을 준 책들이라기보다는 《흰》을 쓰던 시기, 그러니까 바르샤바에 머물던 시기에 읽었던 책들의 목록으로 한정해서 썼던 짧은 에세이입니다. 벌써 10년이 흘러서 이젠 지금의 저와 아주 가깝게 느껴지는 책은 없네요. 사실 어떤 작가에게 영향을 받았다고 말하기가 참 어렵습니다. 어렸을 때부터 저에게 작가들은 일종의 집합체처럼 느껴졌습니다. 저마다 다른 방식으로 자신이 다루는 것들에 골몰해 있고, 뚫고 나가려 하는 사람들의 집합체요. 그들 전체의 이미지로부터 깊은 영향을, 때로 감동을 받습니다.</p>
                 </div>
             </div>
-            <div class="interview section">
+            <div class="interview article">
                 <h3>최근 썼던 글에 마음 머물러… 아직까지 마음 가는 인물은 《작별하지 않는다》 주인공</h3>
                 <div class="more">더보기</div>
                 <div class="interviewBody">
@@ -131,6 +133,7 @@
         </section>
         <section id="otherWriter">
             <h2>최근 이달의 작가</h2>
+            <div class="books book4">
             <div class="circle">
                 <a href="#">
                     <img src="images/gilyeong2.jpg" alt="송길영작가">
@@ -154,6 +157,7 @@
                     <img src="images/yeonman2.jpg" alt="연만작가">
                     <p class="circleBack">연만 작가</p>
                 </a>
+            </div>
             </div>
         </section>
     </article>
