--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h2>신간 도서</h2>
                 <p>엄우진님이 좋아하실만한 신간을 모아봤어요</p>
             </div>
-            <div class="newBook">
+            <div class="newBook books book3">
                 <div class="book">
                     <a href="#"><img src="images/young1.jpg" alt="z세대 트렌드" class="circle"></a>
                     <p>z세대 트렌드</p>
