--- a/recommend.html
+++ b/recommend.html
@@ -50,7 +50,39 @@
                 <li>사전</li>
             </ul>
         </section>
-        <div id="mainContent">
+        <section id="mainContent">
+            <div class="productCard">
+                <div class="book">
+                    <a href="bookInfo.html"><img src="images/boy.jpg" alt="소년이 온다"></a>
+                </div>
+                <div class="bookInfo">
+                    <h3>소년이 온다</h3>
+                    <p class="gray">한강</p>
+                    <h4>13,500</h4><span>원</span>
+                    <p class="cardDescription">이탈리아 말라파르테 문학상 수상작. 한강의 여섯번째 장편소설. '상처의 구조에 대한 투시와 천착의 서사'를 통해 한강만이 풀어낼 수 있는 방식으로 1980년 5월을 새롭게 조명한다.</p>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
+                </div>
+            </div>
+            <div class="productCard">
+                <div class="book">
+                    <a href="#"><img src="images/god.jpg" alt="who? faker"></a>
+                </div>
+                <div class="bookInfo">
+                    <h3>who? faker</h3>
+                    <p class="gray">김정욱 · 이지은</p>
+                    <h4>15,000</h4><span>원</span>
+                    <p class="cardDescription">그동안 수많은 경기들을 중계해 왔고, 수많은 선수들을 봐 왔습니다. 그중 ‘페이커’, 이상혁 선수는 제가 만난 가장 완벽한 프로 게이머이자 그 누구보다 자신에게 철저한 청년입니다. 그 나이에 어떻게 이런 성숙함과 강인한 멘탈을 갖고 있는지 늘 궁금했던 저에게 이 책이 그 답을 주었습니다. 새롭게 개정된 『who? 스페셜 페이커』를 통해 프로 게이머를 꿈꾸는 친구들뿐만 아니라 진로에 대해 고민하고 있는 모든 10대들이 자신만의 해답을 찾아 나가길 바랍니다.
+                        한국에서 페이커와 같이 세계적으로 인정받는 프로 게이머 선수가 나왔다는 것이 자랑스럽습니다. 이 책에는 이상혁 선수의 어린 시절부터, 세계를 놀라게 한 신예로 데뷔해 최고의 자리에 오르기까지의 감동적인 스토리가 담겨 있습니다. 페이커가 지금의 최정상에 오기까지 어떠한 노력과 고민이 있었는지 이 책을 통해 만나 보세요.
+                    </p>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
+                </div>
+            </div>
             <div class="productCard">
                 <div class="book">
                     <a href="#"><img src="images/vegetarian.jpg" alt="채식주의자"></a>
@@ -60,8 +92,10 @@
                     <p class="gray">한강</p>
                     <h4>13,500</h4><span>원</span>
                     <p class="cardDescription">2016년 인터내셔널 부커상을 수상하며 한국문학의 입지를 한단계 확장시킨 한강의 장편소설 『채식주의자』를 15년 만에 새로운 장정으로 선보인다.</p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -74,8 +108,10 @@
                     <h4>13,320</h4><span>원</span>
                     <p class="cardDescription">영미권을 대표하는 문학상 맨부커상과 전미도서상 최종후보에 나란히 오르고, 25개 언론사에서 ‘올해의 책’으로 꼽은 화제작 《리틀 라이프》가 한국어판으로 출간되었다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -88,8 +124,10 @@
                     <h4>10,800</h4><span>원</span>
                     <p class="cardDescription">해마다 3월 14일에 가죽을 뒤집에 쓴 한 남자가 행렬을 대동하고 로마 시가지에 끌려 다니며 기다란 흰 막대기로 얻어맞고 성 밖으로 쫓겨났다. 그는 마무리우스 베투리우스, 곧 '늙은 마르스'라고 불렀다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -102,8 +140,10 @@
                     <h4>11,700</h4><span>원</span>
                     <p class="cardDescription">유령, 변종 해파리, 나무가 된 사람 등 환상적 존재들은 일상적인 사건처럼 삶에 스며 인물들을 긴긴 생각에 잠기도록 만든다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -116,8 +156,10 @@
                     <h4>13,500</h4><span>원</span>
                     <p class="cardDescription">미국 작가 존 디디온의 『푸른 밤』은 사소하게 보였던 감염으로 서른아홉 나이에 세상을 떠난 딸 퀸타나 루 던 마이클의 죽음을 다룬 회고록이다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -130,8 +172,10 @@
                     <h4>14,400</h4><span>원</span>
                     <p class="cardDescription">출간 즉시 미국 서점가 베스트셀러에 오른 이 책은, 2021년 뉴욕 타임스, NPR 같은 유수의 언론매체와 아마존 등에서 올해의 책으로 선정되었고 버락 오바마 추천도서에 꼽히기도 했다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -144,8 +188,10 @@
                     <h4>11,250</h4><span>원</span>
                     <p class="cardDescription">『아침 그리고 저녁』은 '이세상' 소설이 아니다 별다른 문턱 없이 이어지는, 저세상을 향해 걸어가는 한 사람의 이야기다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -158,8 +204,10 @@
                     <h4>14,400</h4><span>원</span>
                     <p class="cardDescription">신작 『작별들 순간들』은 읽기와 쓰기, 작가로 존재하기에 대해 쓴 산문으로 그 영토를 여행하는 데 가장 적합한 안내서가 될 것이다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -172,8 +220,10 @@
                     <h4>16,650</h4><span>원</span>
                     <p class="cardDescription">『이야기의 끝』의 이름 없는 화자는 오래전 지나간 연애에 대한 기억을 소설로 재구성하려 한다. 하지만 이 시도는 매번 불확실한 스케치에 그치고 끝끝내 과거와 착각은 분간되지 않는다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
             <div class="productCard">
@@ -186,11 +236,13 @@
                     <h4>10,800</h4><span>원</span>
                     <p class="cardDescription">1965년 등단한 이래 ‘시의 언어와 구조’의 문제에 대해 그 누구보다 치열하게 탐구해왔던 시인 오규원의 유고시집이다.
                     </p>
-                    <button class="cartBtn btnP">장바구니</button>
-                    <button class="buyBtn btnP">바로구매</button>
+                    <div class="buttons">
+                        <button class="cartBtn btnP">장바구니</button>
+                        <button class="buyBtn btnP">바로구매</button>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </article>
     <footer id="footer"></footer>
     <script src="script/embed.js"></script>
