--- a/bbs.html
+++ b/bbs.html
@@ -10,7 +10,7 @@
 <body id="bbs">
   <header id="header">
   </header>
-  <article id="content">
+  <div id="content">
     <section id="lnb">
       <div class="lnbBar">
         <p><a href="index.html"><img src="images/home.svg" alt="집 이미지"></a> > <a href="bbs.html">커뮤니티</a> > <a href="#" class="lnbNow">소설</a></p>
@@ -146,7 +146,7 @@
         <a href="#" class="doubleRight"><img src="images/doubleRight.svg" alt="오른쪽 화살표 두개"></a>
       </p>
     </section>
-  </article>
+  </div>
   <footer id="footer">
   </footer>
   <script src="script/embed.js"></script>
