--- a/bbsWrite.html
+++ b/bbsWrite.html
@@ -8,7 +8,7 @@
 </head>
 <body id="bbsWrite">
     <header id="header"></header>
-    <article id="content">
+    <div id="content">
         <section id="write">
             <h2>글쓰기</h2>
             <form method="post">
@@ -31,7 +31,7 @@
                 </div>
             </form>
         </section>
-    </article>
+    </div>
     <footer id="footer"></footer>
     <script src="script/embed.js"></script>
     <script src="script/bbsWrite.js"></script>
