--- a/bookInfo.html
+++ b/bookInfo.html
@@ -12,7 +12,7 @@
 <body id="bookInfo">
     <header id="header">
     </header>
-    <article id="content">
+    <div id="content">
         <section id="lnb">
             <div class="lnbBar">
                 <p><a href="index.html"><img src="images/home.svg" alt="집 이미지"></a> > <a href="category.html">카테고리</a> > <a href="category.html">소설/에세이/시</a></p>
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-    </article>
+    </div>
     <footer id="footer">
     </footer>
     <script src="script/embed.js"></script>
