--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="index">
     <header id="header">
     </header>
-    <article id="content">
+    <div id="content">
         <section id="eventPhoto">
             <img src="images/eventPhoto1.png" alt="이벤트 이미지">
             <img src="images/eventPhoto2.png" alt="이벤트 이미지">
@@ -183,7 +183,7 @@
             </div>
         </section>
         <!-- section#hotReview end -->
-    </article>
+    </div>
     <footer id="footer">
     </footer>
     <script src="script/embed.js"></script>
