--- a/recommend.html
+++ b/recommend.html
@@ -9,7 +9,7 @@
 </head>
 <body id="recommendPage">
     <header id="header"></header>
-    <article id="content">
+    <div id="content">
         <section id="lnb">
             <div class="lnbBar">
                 <p>
@@ -242,7 +242,7 @@
                 </div>
             </div>
         </section>
-    </article>
+    </div>
     <footer id="footer"></footer>
     <script src="script/embed.js"></script>
     <script src="script/lnb.js"></script>
