--- a/writerIntro.html
+++ b/writerIntro.html
@@ -9,7 +9,7 @@
 </head>
 <body id="writerIntroPage">
     <header id="header"></header>
-    <article id="content">
+    <div id="content">
         <section id="lnb">
             <div class="lnbBar">
                 <p><a href="index.html"><img src="images/home.svg" alt="집 이미지"></a> > <a href="writerIntro.html">이달의 작가</a> > <a href="#" class="lnbNow">한강</a></p>
@@ -160,7 +160,7 @@
             </div>
             </div>
         </section>
-    </article>
+    </div>
     <footer id="footer"></footer>
     <script src="script/embed.js"></script>
     <script src="script/writerIntro.js"></script>
