--- a/category.html
+++ b/category.html
@@ -10,7 +10,7 @@
 <body id="category">
     <header id="header">
     </header>
-    <article id="content">
+    <div id="content">
         <section id="lnb">
             <div class="lnbBar">
                 <p><a href="index.html"><img src="images/home.svg" alt="집 이미지"></a> > <a href="bbs.html">카테고리</a> > <a href="#" class="lnbNow">소설/에세이/시</a></p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-    </article>
+    </div>
     <footer id="footer">
     </footer>
     <script src="script/embed.js"></script>
